--- a/ft_containers/Makefile
+++ b/ft_containers/Makefile
@@ -6,14 +6,16 @@
 #    By: schuah <schuah@student.42kl.edu.my>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/11/14 15:35:19 by schuah            #+#    #+#              #
-#    Updated: 2023/02/20 18:41:59 by schuah           ###   ########.fr        #
+#    Updated: 2023/03/01 14:25:18 by schuah           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME		=	ft_containers
 CXX			=	c++
-RM			=	rm -f
-CXXFLAGS	=	-Wall -Wextra -Werror -std=c++98 -pedantic #-fsanitize=address -g3
+RM			=	rm -rf
+MKDIR		=	mkdir -p
+CXXFLAGS	=	-Wall -Wextra -Werror -std=c++98 -pedantic
+# CXXFLAGS	+=	-fsanitize=address -g3
 SRCS_FILES	=	main
 SRCS		= 	$(addprefix $(SRCS_DIR), $(addsuffix .cpp, $(SRCS_FILES)))
 OBJS		= 	$(addprefix $(OBJS_DIR), $(addsuffix .o, $(SRCS_FILES)))
@@ -21,7 +23,7 @@ SRCS_DIR	=	srcs/
 OBJS_DIR	=	objs/
 
 all:
-				mkdir -p $(OBJS_DIR)
+				$(MKDIR) $(OBJS_DIR)
 				make $(NAME)
 
 $(OBJS_DIR)%.o: $(SRCS_DIR)%.cpp
@@ -31,9 +33,8 @@ $(NAME):		$(OBJS)
 				$(CXX) $(CXXFLAGS) $(OBJS) -o $(NAME)
 
 test:
-				make re
-				make vector stack map set
-				rm -rf $(NAME)
+				make re vector stack map set
+				$(RM) $(NAME)
 
 vector:
 				$(CXX) $(CXXFLAGS) container_testers/vector.cpp -o $(NAME)
@@ -52,11 +53,11 @@ set:
 				./$(NAME)
 
 clean:
-				rm -rf $(OBJS_DIR)
+				$(RM) $(OBJS_DIR)
 
 fclean:			clean
-				rm -rf $(NAME)
+				$(RM) $(NAME)
 
 re:				fclean all
 
-.PHONY:			all clean fclean re test vector stack map set
+.PHONY:			all clean fclean re
